Fixed an SCSS issue, overflow content

--- a/skyview/src/components/SkyView/SkyView.scss
+++ b/skyview/src/components/SkyView/SkyView.scss
@@ -1,7 +1,12 @@
 * {
-    margin: 0;
+    box-sizing: border-box;
 }
 
+body, html {
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
 
 
 .app-container.rainy-background {
@@ -44,7 +49,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     object-fit: cover;
-    padding-top: 75px;
+    height: 100vh;
+    padding-top: 84px;
 
 
     .container {
@@ -111,16 +117,23 @@
             justify-content: center;
             color: white;
             font-size: 20px;
+            margin-top: 15px;
         }
 
         .message {
             display: flex;
             justify-content: center;
             color: white;
-            font-size: 26px;
+            font-size: 20px;
             font-weight: 400;
-            margin-top: 20px;
-            margin-bottom: 150px;
+            margin-top: 40px;
+            margin-bottom: 100px;
+        }
+
+        .wind-data {
+            display: flex;
+            margin-top: 10px;
+            gap: 10px;
         }
 
         .weather-location {
@@ -168,5 +181,8 @@
         .wind-speed {
             color: #FFF;
         }
+    }
+    a {
+        color: #FFF;
     }
 }
